feat: mt-234 -  create sequence for workflow node