@@ -13,7 +13,7 @@
     <parent>
         <groupId>ai.flowx</groupId>
         <artifactId>flowx-mvn-parent</artifactId>
-        <version>3.0.1</version>
+        <version>3.2.1</version>
     </parent>
 
 
@@ -47,6 +47,11 @@
             <artifactId>keycloak-admin-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>ai.flowx.lib</groupId>
+            <artifactId>commons-testing-lib</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -64,6 +69,7 @@
     </profiles>
 
     <build>
+        <testSourceDirectory>${project.basedir}/src/test/it/java</testSourceDirectory>
         <defaultGoal>spring-boot:run</defaultGoal>
         <plugins>
             <plugin>
@@ -96,6 +102,7 @@
                 <configuration>
                     <argLine>
                         --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
